psa-mpol/add-privileged-existing-namespaces/.chainsaw-test/exception-sibling.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-privileged-exception-sibling
  labels: {}
