psa-mpol/add-privileged-existing-namespaces/.chainsaw-test/not-patched-ns03.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
  name: kube-system
