psa-mpol/add-privileged-existing-namespaces/.chainsaw-test/policy-update.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: add-privileged-existing-namespaces
spec:
  evaluation:
    mutateExisting:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["namespaces"]
  matchConditions:
    - name: exclude-kube-system
      expression: 'object.metadata.name != "kube-system"'
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: |
          Object{
            metadata: Object.metadata{
              labels: {"pod-security.kubernetes.io/enforce": "baseline"}
            }
          }
