psa-mpol/add-privileged-existing-namespaces/.chainsaw-test/exception-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-privileged-exception-ns
  labels:
    color: green
